# Web_Platform_Usage_Analytics_System

./: README.md  docker-compose.yml
alerting/: Dockerfile  requirements.txt
alerting/app/: main.py
auth/: Dockerfile  requirements.txt
auth/app/: database.py  main.py  models.py  security.py
auth/app/static/: index.html  main.js  styles.css
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test.db
backend/app/: database.py  main.py  models.py
backend/app/adapters/: __init__.py  base.py  http_adapter.py
backend/app/api/: admin.py  analytics.py  collect.py
exporter/: Dockerfile  app.py  requirements.txt
frontend/: .dockerignore  Dockerfile  index.html  package.json
frontend/src/: AdminPanel.tsx  main.tsx  styles.css
ingestion/: requirements.txt
ingestion/app/: main.py
local-site/: Dockerfile  index.html
local-site/JavaScript/: tracker.js
processor/: Dockerfile  requirements.txt
processor/app/: worker.py
realtime/: Dockerfile  app.py
tools/: generate_demo_traffic.py
tools/extension/: background.js  content_script.js  manifest.json
