[tool.poetry]
name = "web-analyzer"
version = "0.1.0"
description = "Monolith web analyzer for diploma project"
authors = ["Author <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlmodel = "^0.0.8"
alembic = "^1.12.0"
psycopg = {version = "^3.1.10", extras = ["binary"]}
httpx = "^0.24.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
